--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         id: changed-files-specific
         uses: tj-actions/changed-files@v35
         with:
+          separator: ","
           files: |
             content/en/**
 
