--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,10 @@ jobs:
       - name: Run step if any file(s) in the en folder change
         if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
-          #echo "One or more files in the en folder has changed."
-          #echo "List all the files that have changed: ${{ steps.changed-files-specific.outputs.all_changed_files }}"
-          for file in ${{ steps.changed-files.outputs.any_changed }}; do
+          echo "One or more files in the en folder has changed."
+          echo "List all the files that have changed: ${{ steps.changed-files-specific.outputs.all_changed_files }}"
+          echo "loop start"
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "$file was changed"
           done
+          echo "loop end"
